[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/github-integration/scripts/InvitationItem.gd" type="Script" id=1]
[ext_resource path="res://addons/github-integration/icons/deny.png" type="Texture" id=2]
[ext_resource path="res://addons/github-integration/icons/accept.png" type="Texture" id=3]
[ext_resource path="res://addons/github-integration/resources/user/circle.png" type="Texture" id=4]
[ext_resource path="res://addons/github-integration/resources/user/RoundAvatar.tres" type="Material" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="InvitationItem" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatar" type="TextureRect" parent="."]
material = ExtResource( 5 )
margin_top = 280.0
margin_right = 40.0
margin_bottom = 320.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 40.0
margin_right = 47.0
margin_bottom = 600.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="User" type="LinkButton" parent="."]
margin_left = 47.0
margin_top = 293.0
margin_right = 75.0
margin_bottom = 307.0
size_flags_vertical = 4
text = "user"

[node name="Label" type="Label" parent="."]
margin_left = 75.0
margin_top = 293.0
margin_right = 258.0
margin_bottom = 307.0
text = "invited you to collaborate on"

[node name="Repository" type="LinkButton" parent="."]
margin_left = 258.0
margin_top = 293.0
margin_right = 287.0
margin_bottom = 307.0
size_flags_vertical = 4
text = "repo"

[node name="Label2" type="Label" parent="."]
margin_left = 287.0
margin_top = 293.0
margin_right = 401.0
margin_bottom = 307.0
text = "with permissions:"

[node name="Permissions" type="Label" parent="."]
margin_left = 401.0
margin_top = 293.0
margin_right = 473.0
margin_bottom = 307.0
text = "permission"

[node name="Result" type="Label" parent="."]
margin_left = 861.0
margin_top = 293.0
margin_right = 861.0
margin_bottom = 307.0
size_flags_horizontal = 10

[node name="AcceptBtn" type="Button" parent="."]
margin_left = 861.0
margin_right = 940.0
margin_bottom = 600.0
size_flags_horizontal = 8
custom_colors/font_color = Color( 0, 0.815686, 0.0705882, 1 )
custom_constants/hseparation = 5
text = "Accept"
icon = ExtResource( 3 )
flat = true

[node name="VSeparator2" type="VSeparator" parent="."]
visible = false
margin_left = 1016.0
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeclineBtn" type="Button" parent="."]
margin_left = 940.0
margin_right = 1024.0
margin_bottom = 600.0
custom_colors/font_color = Color( 1, 0, 0.270588, 1 )
custom_constants/hseparation = 5
text = "Decline"
icon = ExtResource( 2 )
flat = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]
use_threads = true
